--- a/src/components/HomeHero/style.scss
+++ b/src/components/HomeHero/style.scss
@@ -1,22 +1,77 @@
 .heroContainer {
-  background: url('../../assets/home-hero/home-hero.png') center / cover;
-  width: 100vw;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../../assets/home-hero/home-hero.png') center / cover;
+  width: 100%;
   max-width: 100%;
   height: 100vh;
   overflow: hidden;
+
+  .navHero {
+    background: rgba(0, 0, 0, 0.575);
+    border-bottom: white 0.8px solid;
+    padding: 20px;
+
+    .navbar-brand {
+      margin-left: 100px;
+    }
+
+    #navbarBasicExample {
+      font-size: small;
+      margin-right: 100px;
+
+      .navbar-item {
+        color: white;
+
+        &:hover {
+          color: #000;
+          background: rgba(255, 255, 255, 0.575);
+        }
+      }
+
+      .button {
+        padding-left: 2em;
+        padding-right: 2em;
+        font-size: 1em;
+      }
+    }
+  }
+
+  .containerTitle {
+    margin: 0 auto;
+    height: 70%;
+    width: 40%;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    flex: 1;
+
+    h1 {
+      color: white;
+      text-align: center;
+      text-shadow: 0px 3px 2px rgba(0, 0, 0, 0.65);
+
+      &:first-child {
+        font-weight: 100;
+        line-height: 1;
+        margin-top: 5rem;
+      }
+    }
+  }
+
 }
 
-.navHero {
-  background-color:rgba(0, 0, 0, 0);
-}
 
-@media(max-width: 1024){
-  .heroContainer{
+@media(max-width: 1024) {
+  .heroContainer {
     background: url('../../assets/home-hero/home-hero.png') center / cover;
   }
 }
-@media(max-width: 768){
-  .heroContainer{
+
+@media(max-width: 768) {
+  .heroContainer {
     background: url('../../assets/home-hero/home-hero.png') center / cover;
+
   }
 }
