--- a/src/components/HomeHero/style.scss
+++ b/src/components/HomeHero/style.scss
@@ -50,12 +50,13 @@
     h1 {
       color: white;
       text-align: center;
-      text-shadow: 0px 3px 2px rgba(0, 0, 0, 0.65);
+      text-shadow: 0px 2px 1px rgba(0, 0, 0, 0.65);
 
       &:first-child {
         font-weight: 100;
-        line-height: 1;
-        margin-top: 5rem;
+        line-height: 0.8;
+        margin-bottom: 0;
+        padding: 0;
       }
     }
   }
