--- a/src/components/KnowMore/style.scss
+++ b/src/components/KnowMore/style.scss
@@ -1,12 +1,13 @@
 .ctnMore {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  align-items: flex-start;
+  justify-content: flex-start;
 
   background: #DCDCDC;
 
   height: 100%;
+  padding-top: 5rem;
 
   .ctnMoreSpace {
 
@@ -40,9 +41,13 @@
   .subtitle {
     padding-top: 2rem;
     color: black;
+    width: 70%;
   }
 
   .titlesInfo {
+    margin-left: 6.5rem;
+    width: 100%;
+
     h1 {
       color: #BDBDBD;
 
