--- a/src/components/HomeHero/style.scss
+++ b/src/components/HomeHero/style.scss
@@ -40,6 +40,8 @@
     height: 70%;
     width: 40%;
 
+    padding-top: 7rem;
+
     display: flex;
     flex-direction: column;
     align-items: center;
