--- a/src/components/AboutUs/style.scss
+++ b/src/components/AboutUs/style.scss
@@ -14,6 +14,7 @@
     height: 100%;
     width: 80%;
     margin-left: 5rem;
+    padding: 6rem;
 
     .titleUs {
       display: flex;
@@ -48,8 +49,8 @@
     justify-content: end;
 
     img {
-      height: 645px;
-      width: 374px;
+      height: 525px;
+      width: 364px;
     }
   }
 
@@ -60,8 +61,8 @@
     justify-content: end;
 
     img {
-      height: 561px;
-      width: 222px;
+      height: 461px;
+      width: 212px;
     }
   }
 }
