--- a/src/components/Gastronomy/style.scss
+++ b/src/components/Gastronomy/style.scss
@@ -3,6 +3,8 @@
   width: 100%;
   max-width: 100%;
 
+  padding-top: 5rem;
+
   .ctnLogo {
     img{
       width: 552px;
@@ -15,7 +17,7 @@
     display:flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: start;
 
     height: 100%;
     width: 80%;
@@ -27,7 +29,7 @@
       justify-content: start;
       
       width: 100%;
-      margin-bottom: 2rem;
+      margin: 2rem 2rem 2rem 0rem;
 
       h1 {
         text-align: left;
@@ -52,7 +54,9 @@
     flex-direction: row;
     flex-wrap: wrap;
 
-    margin-top: 2rem;
+    justify-content: space-between;
+    margin-top: 3rem;
+    width: 80%;
 
     .card {
       margin: 0.5rem;
@@ -70,11 +74,11 @@
       }
       .card-image{
         position: relative;
-        bottom: 50px;
+        bottom: 40px;
 
         img{
           width: 160px;
-          height: 230px;
+          height: 200px;
         }
       }
     }
