--- a/src/components/KnowMore/style.scss
+++ b/src/components/KnowMore/style.scss
@@ -7,9 +7,7 @@
   background: #DCDCDC;
 
   height: 100%;
-  padding: 5rem;
-  width: 100%;
-  margin: 0 auto;
+  padding: 5rem 5rem 5rem 7rem;
 
   .ctnMoreSpace {
 
@@ -40,14 +38,14 @@
   }
 
   .subtitle {
-    padding-top: 1rem;
+    padding-top: 3rem;
     color: black;
-    width: 70%;
+    width: 100%;
   }
 
   .titlesInfo {
     width: 100%;
-    padding-top: 1rem;
+    padding-top: 3rem;
 
     h1 {
       color: #BDBDBD;
@@ -57,5 +55,16 @@
         cursor: pointer;
       }
     }
+  }
+}
+
+.image.is-fullwidth {
+  width: 100%;
+  height: 100%;
+
+  img {
+    display: block;
+    height: 100%;
+    width: 100%;
   }
 }
